cluster/argocd/argocd-server-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
        - name: argocd-server
          args:
            - /usr/local/bin/argocd-server
            - --basehref
            - /argocd
            - --rootpath
            - /argocd
