cluster/argocd/gitops-git-daemon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-git
spec:
  selector:
    app.kubernetes.io/name: gitops-git
  ports:
    - name: git
      port: 9418
      targetPort: git
