cluster/argocd/gitops-repo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-http
spec:
  selector:
    app.kubernetes.io/name: gitops-http
  ports:
    - name: http
      port: 80
      targetPort: http
